Se corrigen los links y estilos

--- a/historialclienteReserva.html
+++ b/historialclienteReserva.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/historialcliente.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/historialcliente.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="/script/tablas.js"></script>
+    <script src="script/tablas.js"></script>
 </head>
 <body>
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/perfilcliente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/historialclientereserva.html">Tus reservas</a></li> 
-                    <li class="nav-item"><a href="/usuariocliente.html">Tus datos</a></li>
-                    <li class="nav-item"><a href="/index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
+                    <li class="nav-item"><a href="perfilcliente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="historialclientereserva.html">Tus reservas</a></li> 
+                    <li class="nav-item"><a href="usuariocliente.html">Tus datos</a></li>
+                    <li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
                 </ul>
             </nav>
         </div>
