--- a/inicioCliente.html
+++ b/inicioCliente.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/incio.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/incio.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -17,17 +17,17 @@
     <!-- ======================================== -->
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/iniciocliente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/servicioscliente.html">Servicios</a></li>
-                    <li class="nav-item"><a href="/quienessomoscliente.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="/reservas.html">Reserva</a></li>
-                    <a href="/perfilcliente.html" class="icons-nav">
+                    <li class="nav-item"><a href="iniciocliente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="servicioscliente.html">Servicios</a></li>
+                    <li class="nav-item"><a href="quienessomoscliente.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="reservas.html">Reserva</a></li>
+                    <a href="perfilcliente.html" class="icons-nav">
                         <i class="fa-solid fa-user"></i>
                     </a> 
-                    <a href="/index.html" class="icons-nav">
+                    <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
                 </ul>
@@ -47,15 +47,15 @@
             <div id="carouselExampleControls" class="carousel slide w-100" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="2500">
-                    <img src="/img/delivery-employees-working-together.jpg" class="d-block w-100" alt="Rerservas">
+                    <img src="img/delivery-employees-working-together.jpg" class="d-block w-100" alt="Rerservas">
                   </div>
 
                   <div class="carousel-item" data-bs-interval="2500">
-                    <img src="/img/paper-box-packaging-delivery-concept.jpg" class="d-block w-100" alt="Nosotros">
+                    <img src="img/paper-box-packaging-delivery-concept.jpg" class="d-block w-100" alt="Nosotros">
                   </div>
                   
                   <div class="carousel-item" data-bs-interval="2500">
-                    <img src="/img/pexels-elevate-1267325.jpg" class="d-block w-100" alt="Servicios">
+                    <img src="img/pexels-elevate-1267325.jpg" class="d-block w-100" alt="Servicios">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -74,21 +74,21 @@
             <h2>Servicios</h2>
             <section class="section-ser">
                 <figure class="figure-ser">
-                    <img src="/img/Events.jpg" alt="">
+                    <img src="img/Events.jpg" alt="">
                     <figcaption>
                         <h3>Eventos</h3>
                         <p>Realizamos prestamos de implementos para tus eventos y queden decorados de la mejor manera.</p>
                     </figcaption>                
                 </figure>
                 <figure>
-                    <img src="/img/packagaing.jpg" alt="">
+                    <img src="img/packagaing.jpg" alt="">
                     <figcaption>
                         <h3>Packing</h3>
                         <p>Empacamos y distribuimos los productos que no soliciten con una seguridad garantizada.</p>
                     </figcaption> 
                 </figure>
                 <figure>
-                    <img src="/img/pexels-sy-donny-1841841.jpg" alt="">
+                    <img src="img/pexels-sy-donny-1841841.jpg" alt="">
                     <figcaption>
                         <h3>Material P.O.P</h3>
                         <p>Creamos todos el material con el logo de tu marca, siempre de la mejor calidad.</p>
@@ -102,7 +102,7 @@
        <section class="container-fluid">
             <div class="row w-75 mx-auto ">
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/Sebastian.jpg" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/Sebastian.jpg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Sebastian Barragan</h3>
                         <p>Aprendiz Sena sebastinbarragan02@gmail.com</p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/Johan.jpeg" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/Johan.jpeg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Johan  Peña Franco</h3>
                         <p>Aprendiz Sena francojohan321@gmail.com</p>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Sergio Chisica Cruz</h3>
                         <p>Aprendiz Sena sergiochicruz2@gmail.com</p>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Santaigo Muñoz</h3>
                         <p>Aprendiz Sena muñozmasantiago1@gmail.com</p>
