--- a/perfilcliente.html
+++ b/perfilcliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/nav.css">
+    <link rel="stylesheet" href="styles/nav.css">
     <!-- <link rel="stylesheet" href="/styles/inicioCliente.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,13 +17,13 @@
 <body>
     <header class="header">
 		<div class="container logo-nav-container">
-			<a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
 				<ul class="list-main-nav">
-					<li class="nav-item"><a href="/perfilcliente.html">Inicio</a></li>
-                	<li class="nav-item"><a href="/historialclientereserva.html">Tus reservas</a></li> 
-                	<li class="nav-item"><a href="/usuariocliente.html">Tus datos</a></li>
-                	<li class="nav-item"><a href="/index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
+					<li class="nav-item"><a href="perfilcliente.html">Inicio</a></li>
+                	<li class="nav-item"><a href="historialclientereserva.html">Tus reservas</a></li> 
+                	<li class="nav-item"><a href="usuariocliente.html">Tus datos</a></li>
+                	<li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
 				</ul>
 			</nav>
 		</div>
@@ -32,7 +32,7 @@
     <main class="main">
         <div class="container">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="/img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                 <div class="descripcion">
                     <h3>Johan cliente</h3>
                     <p>Bienvenido!! Todo esta listo para que gestiones tus reservas<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
