--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- ======================================== -->
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/index.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a href="/quienessomos.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="/login.html">Iniciar Sesión</a></li> 
-                    <li class="nav-item" id="sign-up"><a href="/signup.html">Únete</a></li>  
+                    <li class="nav-item"><a href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a href="servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a href="quienessomos.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="login.html">Iniciar Sesión</a></li> 
+                    <li class="nav-item" id="sign-up"><a href="signup.html">Únete</a></li>  
                 </ul>
             </nav>
         </div>
@@ -43,17 +43,17 @@
             <div id="carouselExampleControls" class="carousel slide w-100" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="2500">
-                    <img src="/img/delivery-employees-working-together.jpg" class="d-block w-100" alt="Rerservas">
+                    <img src="img/delivery-employees-working-together.jpg" class="d-block w-100" alt="Rerservas">
                     <a href='https://www.freepik.com/photos/delivery-woman'>Delivery woman photo created by freepik - www.freepik.com</a>
                   </div>
 
                   <div class="carousel-item" data-bs-interval="2500">
-                    <img src="/img/paper-box-packaging-delivery-concept.jpg" class="d-block w-100" alt="Nosotros">
+                    <img src="img/paper-box-packaging-delivery-concept.jpg" class="d-block w-100" alt="Nosotros">
                     <a href='https://www.freepik.com/photos/generosity'>Generosity photo created by rawpixel.com - www.freepik.com</a>
                   </div>
                   
                   <div class="carousel-item" data-bs-interval="2500">
-                    <img src="/img/pexels-elevate-1267325.jpg" class="d-block w-100" alt="Servicios">
+                    <img src="img/pexels-elevate-1267325.jpg" class="d-block w-100" alt="Servicios">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -72,21 +72,21 @@
             <h2>Servicios</h2>
             <section class="section-ser">
                 <figure class="figure-ser">
-                    <img src="/img/Events.jpg" alt="">
+                    <img src="img/Events.jpg" alt="">
                     <figcaption>
                         <h3>Eventos</h3>
                         <p>Realizamos prestamos de implementos para tus eventos y queden decorados de la mejor manera.</p>
                     </figcaption>                
                 </figure>
                 <figure>
-                    <img src="/img/packagaing.jpg" alt="">
+                    <img src="img/packagaing.jpg" alt="">
                     <figcaption>
                         <h3>Packing</h3>
                         <p>Empacamos y distribuimos los productos que no soliciten con una seguridad garantizada.</p>
                     </figcaption> 
                 </figure>
                 <figure>
-                    <img src="/img/pexels-sy-donny-1841841.jpg" alt="">
+                    <img src="img/pexels-sy-donny-1841841.jpg" alt="">
                     <figcaption>
                         <h3>Material P.O.P</h3>
                         <p>Creamos todos el material con el logo de tu marca, siempre de la mejor calidad.</p>
@@ -100,7 +100,7 @@
        <section class="container-fluid">
             <div class="row w-75 mx-auto ">
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/Sebastian.jpg" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/Sebastian.jpg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Sebastian Barragan</h3>
                         <p>Aprendiz Sena sebastinbarragan02@gmail.com</p>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/Johan.jpeg" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/Johan.jpeg" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Johan Peña Franco</h3>
                         <p>Aprendiz Sena <br> francojohan321@gmail.com</p>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Sergio Chisica Cruz</h3>
                         <p>Aprendiz Sena sergiochicruz2@gmail.com</p>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                    <img src="/img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                    <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                     <div class="descripcion">
                         <h3>Santaigo Muñoz</h3>
                         <p>Aprendiz Sena muñozmasantiago1@gmail.com</p>
