--- a/iniciovistagerente.html
+++ b/iniciovistagerente.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventarios</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/despachos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,13 +14,13 @@
 <body>
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/iniciovistagerente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/inventarios.html">Inventarios</a></li>
-                    <li class="nav-item" id="sign-up"><a href="/reservaslogin.html">Reservas</a></li>
-                    <a href="/index.html" class="icons-nav">
+                    <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
+                    <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
+                    <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
                 </ul>
@@ -32,7 +32,7 @@
     <main class="main">
         <div class="container">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="/img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                 <div class="descripcion">
                     <h3>Rene Malaver</h3>
                     <p>Bienvenido!! Todo esta listo para que gestiones tu empresa <br> Revisa o gestiona tu perfil <br> <br> <a href="/usuariogerente.html" class="btn btn-outline-secondary">PERFIL</a></p>
