--- a/logIn.html
+++ b/logIn.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Ingresar</title>
-    <link rel="stylesheet" href="/styles/login.css">
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
-    <script src="/script/validacion.js"></script>
+    <script src="script/validacion.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -18,12 +18,12 @@
   <!-- ======================================== -->
   <header class="header">
     <div class="container logo-nav-container">
-      <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+      <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
       <nav class="main-nav">
-        <a href="/signup.html" class="inscribirse">
+        <a href="signup.html" class="inscribirse">
           ¿Aún no tienes cuenta?
         </a>
-        <a href="/index.html" class="icons-nav">
+        <a href="index.html" class="icons-nav">
           <i class="fa-solid fa-house"></i>
         </a>
       </nav>
