--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/footer.css">
-    <link rel="stylesheet" href="/styles/quienessomos.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/quienessomos.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -17,14 +17,14 @@
     <!-- ======================================== -->
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/index.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/servicios.html">Servicios</a></li>
-                    <li class="nav-item"><a href="/quienessomos.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="/login.html">Iniciar Sesión</a></li> 
-                    <li class="nav-item" id="sign-up"><a href="/signup.html">Únete</a></li>  
+                    <li class="nav-item"><a href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a href="servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a href="quienessomos.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="login.html">Iniciar Sesión</a></li> 
+                    <li class="nav-item" id="sign-up"><a href="signup.html">Únete</a></li>  
                 </ul>
             </nav>
         </div>
@@ -36,7 +36,7 @@
     <main class="main">
             <section class="sobre-nosotros">
                 <figure class="figure-sobre">
-                    <img src="/img/klara-vernarcova-XfNlY47n6K8-unsplash.jpg" alt="" height="">
+                    <img src="img/klara-vernarcova-XfNlY47n6K8-unsplash.jpg" alt="" height="">
                 </figure>          
                 <aside class="text-sobre-nosotros">
                     <h2>Sobre nosotros</h2>
@@ -65,7 +65,7 @@
                 </aside>
 
                 <figure class="figure-sobre">
-                    <img src="/img/wepik-2022227-17314.png" alt="" height="" class="figure-vision">
+                    <img src="img/wepik-2022227-17314.png" alt="" height="" class="figure-vision">
                 </figure>               
             </section>
 
@@ -74,7 +74,7 @@
                     <div class="row w-75 mx-auto">
                         <h2>Equipo de trabajos</h2>
                         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                            <img src="/img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                            <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
                                 <h3>Rene Malaver</h3>
                                 <p>Gerente Empresa Renema5642@gmail.com</p>
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                            <img src="/img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                            <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                             <div class="descripcion">
                                 <h3>Henry Malaver</h3>
                                 <p>Gerente Empresa Henryma1564@gmail.com</p>
