--- a/reservas.html
+++ b/reservas.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/reservas.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/reservas.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="/script/pestañas.js" defer></script>
-    <script src="/script/validacionReserva.js"></script>
+    <script src="script/pestañas.js" defer></script>
+    <script src="script/validacionReserva.js"></script>
 </head>
 <body>
      <!-- ENCABEZADO -->
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/iniciocliente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/servicioscliente.html">Servicios</a></li>
-                    <li class="nav-item"><a href="/quienesSomoscliente.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="/reservas.html">Reservar</a></li>
-                    <a href="/perfilcliente.html" class="icons-nav">
+                    <li class="nav-item"><a href="iniciocliente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="servicioscliente.html">Servicios</a></li>
+                    <li class="nav-item"><a href="quienesSomoscliente.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="reservas.html">Reservar</a></li>
+                    <a href="perfilcliente.html" class="icons-nav">
                         <i class="fa-solid fa-user"></i>
                     </a> 
-                    <a href="/index.html" class="icons-nav">
+                    <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a>
                 </ul>
