--- a/servicioscliente.html
+++ b/servicioscliente.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/servicios.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/servicios.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header class="header">
         <div class="container logo-nav-container">
-            <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+            <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/iniciocliente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/servicioscliente.html">Servicios</a></li>
-                    <li class="nav-item"><a href="/quienessomoscliente.html">Quiénes somos</a></li>
-                    <li class="nav-item"><a href="/reservas.html">Reserva</a></li>
-                    <a href="/perfilcliente.html" class="icons-nav">
+                    <li class="nav-item"><a href="iniciocliente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="servicioscliente.html">Servicios</a></li>
+                    <li class="nav-item"><a href="quienessomoscliente.html">Quiénes somos</a></li>
+                    <li class="nav-item"><a href="reservas.html">Reserva</a></li>
+                    <a href="perfilcliente.html" class="icons-nav">
                         <i class="fa-solid fa-user"></i>
                     </a> 
-                    <a href="/index.html" class="icons-nav">
+                    <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
                 </ul>
@@ -39,7 +39,7 @@
                 <h2>Packing</h2>
                 <section class="article-ser packing">
                     <figure>
-                        <img src="/img/rosebox-BFdSCxmqvYc-unsplash (1).jpg" alt="">
+                        <img src="img/rosebox-BFdSCxmqvYc-unsplash (1).jpg" alt="">
                     </figure>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad exercitationem quos voluptatem nisi harum, perferendis praesentium, ex maiores similique explicabo corporis ea hic libero numquam facilis nostrum quia necessitatibus aperiam?
@@ -49,7 +49,7 @@
                 <h2>Eventos</h2>
                 <section class="article-ser eventos">
                     <figure>
-                        <img src="/img/pexels-angela-roma-7319105.jpg" alt="">
+                        <img src="img/pexels-angela-roma-7319105.jpg" alt="">
                     </figure>                 
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, voluptatibus est repellendus dicta eos voluptatum tempore vero amet similique necessitatibus ullam nisi eligendi labore, laudantium sequi quo iste doloribus. Dignissimos!
@@ -60,7 +60,7 @@
                 <h2>Material P.O.P</h2>
                 <section class="article-ser material">
                     <figure>
-                        <img src="/img/3d-illustration-corporate-identity-stationary-branding-set-mockup.jpg " alt="Foto de corporativo creado por mego-studio - www.freepik.e">
+                        <img src="img/3d-illustration-corporate-identity-stationary-branding-set-mockup.jpg " alt="Foto de corporativo creado por mego-studio - www.freepik.e">
                         <a href='https://www.freepik.es/fotos/corporativo'>Foto de corporativo creado por mego-studio - www.freepik.es</a>
                     </figure>    
                     
@@ -71,7 +71,7 @@
                 </section>
             </section>          
             <!-- <button type="button" class="btn btn-primary m-0 text-center">Primary</button> -->
-            <a href="/reservas.html">
+            <a href="reservas.html">
                 <button class="button" type="button">Reservas</button>
             </a>
         <!-- </div> -->
