--- a/signup.html
+++ b/signup.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cuenta</title>
-    <link rel="stylesheet" href="/styles/signup.css">
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/footer.css">
-    <script src="/script/validacionReserva.js"></script>
+    <link rel="stylesheet" href="styles/signup.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <script src="script/validacionReserva.js"></script>
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -19,12 +19,12 @@
     <!-- ======================================== -->
     <header class="header">
         <div class="container logo-nav-container">
-          <a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+          <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
           <nav class="main-nav">
-            <a href="/login.html" class="inscribirse">
+            <a href="login.html" class="inscribirse">
               ¿Ya tienes una cuenta?
             </a>
-            <a href="/index.html" class="icons-nav">
+            <a href="index.html" class="icons-nav">
               <i class="fa-solid fa-house"></i>
             </a>
           </nav>
