--- a/usuariogerente.html
+++ b/usuariogerente.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/nav.css">
-	<link rel="stylesheet" href="/styles/clientenav.css">
-    <link rel="stylesheet" href="/styles/datoscliente.css">
+    <link rel="stylesheet" href="styles/nav.css">
+	<link rel="stylesheet" href="styles/clientenav.css">
+    <link rel="stylesheet" href="styles/datoscliente.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -18,12 +18,12 @@
 <body> 
 	<header class="header">
 		<div class="container logo-nav-container">
-			<a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
 				<ul class="list-main-nav">
-					<li class="nav-item"><a href="/iniciovistagerente.html">Inicio</a></li>
-                	<li class="nav-item"><a href="/usuariogerente.html">Tus datos</a></li>
-                	<li class="nav-item"><a href="/index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
+					<li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
+                	<li class="nav-item"><a href="usuariogerente.html">Tus datos</a></li>
+                	<li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
 				</ul>
 			</nav>
 		</div>
