--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/nav.css">
+    <link rel="stylesheet" href="styles/nav.css">
     <!-- <link rel="stylesheet" href="/styles/inicioCliente.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,17 +17,17 @@
 <body>
     <header class="header">
 		<div class="container logo-nav-container">
-			<a href="#" class="logo"><img src="/img/Logo Team Digital Yelmos.jpeg" alt=""></a>
+			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="/vistaAdministrador.html">Inicio</a></li>
-                    <li class="nav-item"><a href="/despachos.html">Despachos</a></li>
-                    <li class="nav-item"><a href="/inventarios.html">Inventarios</a></li>
-                    <li class="nav-item"><a href="/eventos.html">Eventos</a></li> 
-                    <li class="nav-item" id="sign-up"><a href="/reservaslogin.html">Reservas</a></li>
-                    <li class="nav-item"><a href="/proveedores.html">Proveedor</a></li> 
-                    <li class="nav-item"><a href="/clientes.html">Clientes</a></li>
-                    <a href="/index.html" class="icons-nav">
+                    <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
+                    <li class="nav-item"><a href="despachos.html">Despachos</a></li>
+                    <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
+                    <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
+                    <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
+                    <li class="nav-item"><a href="proveedores.html">Proveedor</a></li> 
+                    <li class="nav-item"><a href="clientes.html">Clientes</a></li>
+                    <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
                 </ul>
@@ -38,7 +38,7 @@
     <main class="main">
         <div class="container">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="/img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+                <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
                 <div class="descripcion">
                     <h3>Fredi Administrador</h3>
                     <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
