--- a/despachos.html
+++ b/despachos.html
@@ -423,20 +423,25 @@
 		<div class="modal-content">
 			<div class="signup-form">
 				<form action="/examples/actions/confirmation.php" method="post">
-					<h2>Agregar Entrega</h2>
-					<p>Agregue datos de la nueva entrega</p>
-					<hr>
+					<h2>Editar Entrega</h2>
+					<p>Editar datos de la entrega</p>
 					<div class="form-group">
-						<div class="row">
-							<div class="col"><input type="text" class="form-control" name="first_name" placeholder="Nombre cliente" required="required"></div>
-							<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Apellido cliente" required="required"></div>
-						</div>        	
+						<input type="text" class="form-control" name="nombrec" placeholder="Nombre Cliente" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="first_name" placeholder="Direccion de la entrega"required="required">
+						<input type="text" class="form-control" name="nombred" placeholder="Nombre Destinatario" required="required">
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" id="start" name="trip-start">
+						<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
+					</div>
+					<div class="form-group">
+						<input type="date" class="form-control" name="Fecha" placeholder="Fecha" min="2022-04-01" max="2022-05-5">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="Direccion" placeholder="Direccion" required="required">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
