--- a/despachos.html
+++ b/despachos.html
@@ -443,6 +443,9 @@
 					<div class="form-group">
 						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
 					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="Detalles" placeholder="Detalles" required="required">
+					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
 						<input type="submit" class="btn btn-danger" value="Agregar">
