--- a/despachos.html
+++ b/despachos.html
@@ -412,9 +412,6 @@
 
 					</tbody>
 				</table>
-				<div class="Generar">
-					<button class="btn btn-light" value="" onclick="exportTableToExcel('myTable')">Generar Reporte</button>
-				</div>
 			</div>
 
 <!-- Edit -->
@@ -516,6 +513,50 @@
 		</div>
 	</div>
 	
+	 <!-- datatables con bootstrap -->
+	 <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	 <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap5.min.js"></script>
+	
+	 <!-- Para usar los botones -->
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	 <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
+	<script>
+	$(document).ready(function () {
+		$("#myTable").DataTable({
+			dom: "Bfrtip",
+			buttons:{
+				dom: {
+					button: {
+						className: 'btn'
+					}
+				},
+				buttons: [
+				{
+					//definimos estilos del boton de excel
+					extend: "excel",
+					text:'Generar Reporte',
+					className:'btn btn-outline-success'
+				}
+				]            
+			}            
+		});
+	});
+	</script>
+	<script>
+		$(document).on('click', ´fa-solid fa-trash´, function(e) {
+			e.preventDefault();
+			var row = $(this).parent(). parent();
+			console.log(row);
+		)}
+	</script>
+
+	
+
+	
+	
+
 </main>    
 </body>
 </html>
