--- a/servicios.html
+++ b/servicios.html
@@ -66,7 +66,7 @@
                 </section>
             </section>          
             <!-- <button type="button" class="btn btn-primary m-0 text-center">Primary</button> -->
-            <a href="reservas.html">
+            <a href="logIn.html">
                 <button class="button" type="button">Reservar</button>
             </a>
         <!-- </div> -->
