--- a/despachos.html
+++ b/despachos.html
@@ -21,7 +21,7 @@
         <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
         <nav class="main-nav">
             <ul class="list-main-nav">
-                <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
+                <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
                 <li class="nav-item"><a href="despachos.html">Despachos</a></li>
                 <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
                 <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
