--- a/reservas.html
+++ b/reservas.html
@@ -116,7 +116,7 @@
                                 <p></p>                
                             </div>
 
-                            <button id="boton1" class="btn btn-outline-secondary" >Enviar</button>
+                            <button class="btn btn-outline-secondary" type="submit" onclick="submitform(); return false;">Enviar</button>
                         
                         </form>
                     <!-- </section>  -->           
