--- a/ReservasGe.html
+++ b/ReservasGe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/reservaslogin.css">
     <link rel="stylesheet" href="styles/footer.css">
-    <script src="script/pestañas.js" defer></script>
+    <script src="/script/pestañas.js" defer></script>
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -18,13 +18,9 @@
             <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
-                    <li class="nav-item"><a href="despachos.html">Despachos</a></li>
-                    <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
-                    <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
-                    <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
-                    <li class="nav-item"><a href="proveedores.html">Proveedor</a></li> 
-                    <li class="nav-item"><a href="clientes.html">Cliente</a></li>
+                    <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
+                    <li class="nav-item"><a href="inventariosg.html">Inventarios</a></li>
+                    <li class="nav-item" id="sign-up"><a href="reservaloging.html">Reservas</a></li>
                     <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a>  
