--- a/perfilcliente.html
+++ b/perfilcliente.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="/styles/perfilcliente1.css">
     <!-- <link rel="stylesheet" href="/styles/inicioCliente.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,9 +21,6 @@
 			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
 				<ul class="list-main-nav">
-					<li class="nav-item"><a href="perfilcliente.html">Inicio</a></li>
-                	<li class="nav-item"><a href="historialclientereserva.html">Tus reservas</a></li> 
-                	<li class="nav-item"><a href="usuariocliente.html">Tus datos</a></li>
                 	<li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
 				</ul>
 			</nav>
@@ -40,6 +38,12 @@
                 </div>
             </div>
         </div>
+
+    <div class="grid">
+        <a href="historialclienteReserva.html" class="a"><div class="reservas"> <h4>Tus Reservas</h4> <img src="/img/estadi.png" alt="imagen" width="180" ></div></a> 
+        <a href="usuariocliente.html" class="a"><div class="datos"><h4>Tus datos</h4> <img src="img/datos.gif" alt="" width="180" height=""></div></a>
+        <a href="reservas.html" class="a"><div class="crea"><h4>Crea reservas <img src="img/reservas.gif" alt="" width="180"></h4></div></a>
+    </div>
     </main>
 </body>
 </html>
