--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <title>Inicio cliente</title>
+    <title>Inicio Administrador</title>
 </head>
 <body>
     <header class="header">
