--- a/perfilcliente.html
+++ b/perfilcliente.html
@@ -29,15 +29,13 @@
     
     <main class="main">
         <div class="container">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
-                <div class="descripcion">
-                    <h3>Johan cliente</h3>
-                    <p>Bienvenido!! Todo esta listo para que gestiones tus reservas<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
-                    </div>
-                </div>
+            <img class="img" src="img/icons8-user-skin-type-7-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
+            <div class="descripcion">
+                <h3>Johan cliente</h3>
+                <p>Bienvenido!! Todo esta listo para que gestiones tus reservas<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
             </div>
         </div>
+    </div>
 
     <div class="grid">
         <a href="historialclienteReserva.html" class="a"><div class="reservas"> <h4>Tus Reservas</h4> <img src="/img/estadi.png" alt="imagen" width="180" ></div></a> 
