--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" href="/styles/inicioCliente.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/Grillado.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
@@ -20,13 +21,6 @@
 			<a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
 			<nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="vistaAdministrador.html">Inicio</a></li>
-                    <li class="nav-item"><a href="despachos.html">Despachos</a></li>
-                    <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
-                    <li class="nav-item"><a href="eventos.html">Eventos</a></li> 
-                    <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
-                    <li class="nav-item"><a href="proveedores.html">Proveedor</a></li> 
-                    <li class="nav-item"><a href="clientes.html">Clientes</a></li>
                     <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
@@ -36,14 +30,23 @@
 	</header>
     
     <main class="main">
-        <div class="container">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
-                <div class="descripcion">
-                    <h3>Fredi Administrador</h3>
-                    <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
+
+
+        <div class="grid">
+            <div class="grid-prefil">
+                    <div>
+                        <img src="img/icons8-administrator-male-96.png" alt="Administrador" width="180">
+                        <h3>Fredi Administrador</h3>
+                        <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
                     </div>
-                </div>
+            </div>
+            <div class="grid-anidados">
+                 <div class="anidados01"><h4>Despachos</h4> <a href="despachos.html" class="a"><img class="ims" src="img/reservas.gif" alt="" width="200"></a></div>
+                 <div class="anidados02"><h4>Inventarios</h4> <a href="inventarios.html" class="a"><img class="ims" src="img/Archivos.gif" alt="" width="200"></a></div>
+                 <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="img/Event.png" alt="" width="200"></a></div>
+                 <div class="anidados04"><h4>Reservas</h4><a href="reservaslogin.html" class="a"><img class="ims" src="img/Reser.png" alt="" width="200"></a> </div>
+                 <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="img/prove.png" alt="" width="200"></a></div>
+                 <div class="anidados06"><h4>Clientes</h4> <a href="clientes.html" class=""> <img class="ims" src="img/usu.png" alt="" width="200"></a></div>
             </div>
         </div>
     </main>
