--- a/inventariosGe.html
+++ b/inventariosGe.html
@@ -22,8 +22,8 @@
         <nav class="main-nav">
             <ul class="list-main-nav">
                 <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
-                <li class="nav-item"><a href="inventariosg.html">Inventarios</a></li>
-                <li class="nav-item" id="sign-up"><a href="reservaloging.html">Reservas</a></li>
+                <li class="nav-item"><a href="inventariosGe.html">Inventarios</a></li>
+                <li class="nav-item" id="sign-up"><a href="ReservasGe.html">Reservas</a></li>
 				<a href="/index.html" class="icons-nav">
 					<i class="fa-solid fa-right-to-bracket"></i>
 				</a> 
