--- a/reservas.html
+++ b/reservas.html
@@ -116,7 +116,7 @@
                                 <p></p>                
                             </div>
 
-                            <button class="btn btn-outline-secondary" type="submit" onclick="submitform(); return false;">Enviar</button>
+                            <button class="btn btn-outline-secondary" type="submit">Validar</button>
                         
                         </form>
                     <!-- </section>  -->           
