--- a/signup.html
+++ b/signup.html
@@ -21,9 +21,8 @@
         <div class="container logo-nav-container">
           <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
           <nav class="main-nav">
-            <a href="login.html" class="inscribirse">
-              ¿Ya tienes una cuenta?
-            </a>
+            <a class="inscribirse">¿Ya tienes una cuenta?</a>
+            <a class="inscribirse" href="logIn.html">Has click aqui</a> 
             <a href="index.html" class="icons-nav">
               <i class="fa-solid fa-house"></i>
             </a>
