--- a/usuariogerente.html
+++ b/usuariogerente.html
@@ -23,6 +23,8 @@
 				<ul class="list-main-nav">
 					<li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
                 	<li class="nav-item"><a href="usuariogerente.html">Tus datos</a></li>
+                	<li class="nav-item"><a href="inventariosGe.html">Tus datos</a></li>
+                	<li class="nav-item"><a href="ReservasGe.html">Tus datos</a></li>
                 	<li class="nav-item"><a href="index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li> 
 				</ul>
 			</nav>
