--- a/iniciovistagerente.html
+++ b/iniciovistagerente.html
@@ -7,6 +7,7 @@
     <title>Inventarios</title>
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/iniciogerente.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/despachos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,9 +18,6 @@
             <a href="#" class="logo"><img src="img/Logo Team Digital Yelmos.jpeg" alt=""></a>
             <nav class="main-nav">
                 <ul class="list-main-nav">
-                    <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="inventariosGe.html">Inventarios</a></li>
-                    <li class="nav-item" id="sign-up"><a href="ReservasGe.html">Reservas</a></li>
                     <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
@@ -30,14 +28,18 @@
 
     
     <main class="main">
-        <div class="container">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5">
-                <img src="img/icons8-administrator-male-96.png" alt="Sebastian Barragan Basto" width="180" height="160">
-                <div class="descripcion">
-                    <h3>Rene Malaver</h3>
-                    <p>Bienvenido!! Todo esta listo para que gestiones tu empresa <br> Revisa o gestiona tu perfil <br> <br> <a href="/usuariogerente.html" class="btn btn-outline-secondary">PERFIL</a></p>
-                    <!-- <span>Lo que no te mata te infecta</span> -->
-                </div>
+        <div class="grid">
+            <div class="grid-prefil">
+                    <div class="perfil">
+                        <img src="img/icons8-administrator-male-96.png" alt="Administrador" width="180">
+                        <h3>Rene Gerente</h3>
+                        <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> estadisticas de tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
+                    </div>
+            </div>
+            <div class="grid-anidados">
+                 <div class="anidados01"><h4>Inventarios</h4> <a href="inventariosGe.html" class="a"><img class="ims" src="img/inventar.png" alt="" width="200"></a></div>
+                 <div class="anidados02"><h4>reservas</h4> <a href="ReservasGe.html" class="a"><img class="ims" src="img/reserva2.png" alt="" width="200"></a></div>
+                 <div class="anidados03"><h4>Tu perfil</h4> <a href="usuariogerente.html" class="a"><img class="ims" src="img/perfil.png" alt="" width="200"></a></div>
             </div>
         </div>
     </main>  
