--- a/vistaAdministrador.html
+++ b/vistaAdministrador.html
@@ -34,18 +34,18 @@
 
         <div class="grid">
             <div class="grid-prefil">
-                    <div>
+                    <div class="perfil">
                         <img src="img/icons8-administrator-male-96.png" alt="Administrador" width="180">
                         <h3>Fredi Administrador</h3>
                         <p>Bienvenido!! Todo esta listo para que gestiones tu empresa<br> Revisa o gestiona tu perfil <br> <br> <button class="btn btn-outline-secondary">Perfil</button></a></p>
                     </div>
             </div>
             <div class="grid-anidados">
-                 <div class="anidados01"><h4>Despachos</h4> <a href="despachos.html" class="a"><img class="ims" src="img/reservas.gif" alt="" width="200"></a></div>
-                 <div class="anidados02"><h4>Inventarios</h4> <a href="inventarios.html" class="a"><img class="ims" src="img/Archivos.gif" alt="" width="200"></a></div>
-                 <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="img/Event.png" alt="" width="200"></a></div>
-                 <div class="anidados04"><h4>Reservas</h4><a href="reservaslogin.html" class="a"><img class="ims" src="img/Reser.png" alt="" width="200"></a> </div>
-                 <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="img/prove.png" alt="" width="200"></a></div>
+                 <div class="anidados01"><h4>Despachos</h4> <a href="despachos.html" class="a"><img class="ims" src="/img/despac.png" alt="" width="200"></a></div>
+                 <div class="anidados02"><h4>Inventarios</h4> <a href="inventarios.html" class="a"><img class="ims" src="/img/inventar.png" alt="" width="200"></a></div>
+                 <div class="anidados03"><h4>Eventos</h4> <a href="eventos.html" class="a"><img class="ims" src="/img/event.png" alt="" width="200"></a></div>
+                 <div class="anidados04"><h4>Reservas</h4><a href="reservaslogin.html" class="a"><img class="ims" src="/img/reserva.png" alt="" width="200"></a> </div>
+                 <div class="anidados05"><h4>proveedores</h4> <a href="proveedores.html" class="a"><img class="ims" src="/img/proveedor.png" alt="" width="200"></a></div>
                  <div class="anidados06"><h4>Clientes</h4> <a href="clientes.html" class=""> <img class="ims" src="img/usu.png" alt="" width="200"></a></div>
             </div>
         </div>
